[package]
name = "cc2p"
version = "0.5.3"
edition = "2024"
description = "Convert a CSV to parquet file format"
authors = ["rayyildiz"]
license-file = "LICENSE"
repository = "https://github.com/rayyildiz/cc2p"
homepage = "https://rayyildiz.com/projects/cc2p"
readme = "README.md"
keywords = ["cli", "csv", "parquet"]
rust-version = "1.85.0"
categories = ["parsing", "text-processing"]

[dependencies]
arrow-csv = { version = "56" }
arrow-schema = { version = "56" }
parquet = { version = "56", features = ["arrow-csv", "arrow"] }
clap = { version = "4.5", features = ["derive", "std"] }
indicatif = { version = "0.18" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "time", "sync", "macros", "io-util"] }
regex = { version = "1.11" }
glob = { version = "0.3" }
thiserror = { version = "2" }
once_cell = { version = "1.21" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
debug = false
strip = true
opt-level = 3
