[package]
name = "cc2p"
version = "0.6.1"
edition = "2024"
description = "Convert a CSV to parquet file format"
authors = ["rayyildiz"]
license-file = "LICENSE"
repository = "https://github.com/rayyildiz/cc2p"
homepage = "https://rayyildiz.com/projects/cc2p"
readme = "README.md"
keywords = ["cli", "csv", "parquet"]
rust-version = "1.88.0"
categories = ["parsing", "text-processing"]

[dependencies]
arrow-csv = { version = "58" }
arrow-schema = { version = "58" }
parquet = { version = "58", features = ["arrow-csv", "arrow"] }
clap = { version = "4.5", features = ["derive", "std"] }
indicatif = { version = "0.18" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "time", "sync", "macros", "io-util"] }
regex = { version = "1.11" }
glob = { version = "0.3" }
thiserror = { version = "2" }
once_cell = { version = "1.21" }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
debug = false
strip = true
opt-level = 3
